update langsmith execution

--- a/notebooks/module_1/tracing_basics.ipynb
+++ b/notebooks/module_1/tracing_basics.ipynb
@@ -23,27 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# You can set them inline\n",
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_PROJECT\"] = \"langsmith-academy\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Or you can use a .env file\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv(dotenv_path=\"../../.env\", override=True)"
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "# load_dotenv(dotenv_path=\"../../.env\", override=True)\n",
+    "_ = load_dotenv(find_dotenv())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = os.getenv(\"LANGSMITH_API_KEY\")\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_PROJECT\"] = \"langsmith-academy\""
    ]
   },
   {
@@ -64,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Import traceable\n",
     "from openai import OpenAI\n",
@@ -132,9 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To trace with the @traceable decorator, simply decorate any function you want to log traces for by adding `@traceable` above its definition. Ensure that the LANGCHAIN_TRACING_V2 environment variable is set to 'true' and that you have the necessary API key configured. This setup allows you to log traces effectively without modifying your code further.\n"
+     ]
+    }
+   ],
    "source": [
     "question = \"How can I trace with the @traceable decorator?\"\n",
     "ai_answer = langsmith_rag(question)\n",
@@ -166,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +190,7 @@
     "\n",
     "@traceable(\n",
     "    # TODO: Add Metadata\n",
-    "    # metadata={\"vectordb\": \"sklearn\"}\n",
+    "    metadata={\"vectordb\": \"sklearn\"}\n",
     ")\n",
     "def retrieve_documents(question: str):\n",
     "    return retriever.invoke(question)\n",
@@ -196,7 +212,7 @@
     "\n",
     "@traceable(\n",
     "    # TODO: Add Metadata\n",
-    "    # metadata={\"model_name\": MODEL_NAME, \"model_provider\": MODEL_PROVIDER}\n",
+    "    metadata={\"model_name\": MODEL_NAME, \"model_provider\": MODEL_PROVIDER}\n",
     ")\n",
     "def call_openai(\n",
     "    messages: List[dict], model: str = MODEL_NAME, temperature: float = 0.0\n",
@@ -216,9 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To add metadata to a Run using the `@traceable` decorator, you can specify the metadata keys and values directly in the decorator's parameters. This allows you to associate additional information, such as session_id, thread_id, or conversation_id, with the trace. For detailed instructions, refer to the documentation on adding metadata keys to a trace.\n"
+     ]
+    }
+   ],
    "source": [
     "question = \"How do I add Metadata to a Run with @traceable?\"\n",
     "ai_answer = langsmith_rag(question)\n",
@@ -253,7 +277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ls-academy",
+   "display_name": "camel",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
