--- a/notebooks/module_0/rag_application.ipynb
+++ b/notebooks/module_0/rag_application.ipynb
@@ -38,27 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or you can use a .env file\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "# load_dotenv(dotenv_path=\"../../.env\", override=True)\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You can set them inline!\n",
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"\"\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = os.getenv(\"LANGSMITH_API_KEY\")\n",
     "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
     "os.environ[\"LANGCHAIN_PROJECT\"] = \"langsmith-academy\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Or you can use a .env file\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv(dotenv_path=\"../../.env\", override=True)"
    ]
   },
   {
@@ -70,9 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching pages:  69%|######8   | 153/222 [00:06<00:02, 24.78it/s]Error fetching https://docs.smith.langchain.com/pricing, skipping due to continue_on_failure=True\n",
+      "Fetching pages: 100%|##########| 222/222 [00:09<00:00, 24.02it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from langsmith import traceable\n",
     "from openai import OpenAI\n",
@@ -156,9 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith is a platform for developing, monitoring, and testing large language model (LLM) applications. It supports workflows throughout the application development lifecycle, including prototyping, debugging, and performance evaluation. Users can trace LLM applications, improve prompts, and create test datasets to ensure application reliability and effectiveness.\n"
+     ]
+    }
+   ],
    "source": [
     "question = \"What is LangSmith used for?\"\n",
     "ai_answer = langsmith_rag(question, langsmith_extra={\"metadata\": {\"website\": \"www.google.com\"}})\n",
@@ -175,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ls-academy",
+   "display_name": "camel",
    "language": "python",
    "name": "python3"
   },
@@ -189,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
