--- a/notebooks/module_1/alternative_tracing_methods.ipynb
+++ b/notebooks/module_1/alternative_tracing_methods.ipynb
@@ -50,12 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can set them inline\n",
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_PROJECT\"] = \"langsmith-academy\"  # If you don't set this, traces will go to the Default project"
+    "# Or you can use a .env file\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "# load_dotenv(dotenv_path=\"../../.env\", override=True)\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv())"
    ]
   },
   {
@@ -64,9 +63,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Or you can use a .env file\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv(dotenv_path=\"../../.env\", override=True)"
+    "# You can set them inline!\n",
+    "import os\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = os.getenv(\"LANGSMITH_API_KEY\")\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_PROJECT\"] = \"langsmith-academy\""
    ]
   },
   {
