--- a/notebooks/module_1/types_of_runs.ipynb
+++ b/notebooks/module_1/types_of_runs.ipynb
@@ -37,27 +37,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or you can use a .env file\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "# load_dotenv(dotenv_path=\"../../.env\", override=True)\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You can set them inline!\n",
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"\"\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = os.getenv(\"LANGSMITH_API_KEY\")\n",
     "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
     "os.environ[\"LANGCHAIN_PROJECT\"] = \"langsmith-academy\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Or you can use a .env file\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv(dotenv_path=\"../../.env\", override=True)"
    ]
   },
   {
@@ -134,6 +136,7 @@
     "\n",
     "@traceable(\n",
     "  # TODO: Add an run_type=\"llm\", and metadata for ls_provider, and ls_model_name\n",
+    "  run_type=\"llm\"\n",
     ")\n",
     "def chat_model(messages: list):\n",
     "  return output\n",
@@ -169,6 +172,7 @@
     "    run_type=\"llm\",\n",
     "    metadata={\"ls_provider\": \"my_provider\", \"ls_model_name\": \"my_model\"},\n",
     "    # TODO: Add a reduce_fn\n",
+    "    reduce_fn = _reduce_chunks\n",
     ")\n",
     "def my_streaming_chat_model(messages: list):\n",
     "    for chunk in [\"Hello, \" + messages[1][\"content\"]]:\n",
@@ -272,6 +276,7 @@
     "\n",
     "@traceable(\n",
     "  # TODO: Add an run_type=\"tool\"\n",
+    "  run_type=\"tool\"\n",
     ")\n",
     "def get_current_temperature(location: str, unit: str):\n",
     "    return 65 if unit == \"Fahrenheit\" else 17\n",
@@ -342,7 +347,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ls-academy",
+   "display_name": "camel",
    "language": "python",
    "name": "python3"
   },
@@ -356,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
