--- a/notebooks/module_1/conversational_threads.ipynb
+++ b/notebooks/module_1/conversational_threads.ipynb
@@ -25,27 +25,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# You can set them inline\n",
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"\"\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_PROJECT\"] = \"langsmith-academy\"  # If you don't set this, traces will go to the Default project"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Or you can use a .env file\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv(dotenv_path=\"../../.env\", override=True)"
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "# load_dotenv(dotenv_path=\"../../.env\", override=True)\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can set them inline!\n",
+    "import os\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = os.getenv(\"LANGSMITH_API_KEY\")\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_PROJECT\"] = \"langsmith-academy\""
    ]
   },
   {
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
    "source": [
     "from langsmith import traceable\n",
     "from openai import OpenAI\n",
@@ -148,9 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To add metadata to a trace in LangSmith, you need to send arbitrary metadata and tags along with the trace when logging it. You can include special metadata keys like session_id, thread_id, or conversation_id to associate the trace with a specific thread. For detailed instructions, refer to the documentation on adding metadata keys to a trace.\n"
+     ]
+    }
+   ],
    "source": [
     "question = \"How do I add metadata to a Trace?\"\n",
     "ai_answer = langsmith_rag(question, langsmith_extra={\"metadata\": {\"thread_id\": thread_id}})\n",
@@ -159,9 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can add tags to a trace in LangSmith by sending arbitrary metadata and tags along with the trace. Additionally, you can annotate a trace inline by clicking on the \"Annotate\" button in the upper right corner of the trace view or by sending it to the Annotation Queue. Feedback tags are associated with your workspace and can be used to provide context for specific runs within the trace.\n"
+     ]
+    }
+   ],
    "source": [
     "question = \"How can I add tags to a Trace?\"\n",
     "ai_answer = langsmith_rag(question, langsmith_extra={\"metadata\": {\"thread_id\": thread_id}})\n",
@@ -178,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ls-academy",
+   "display_name": "camel",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
