--- a/notebooks/module_2/experiments.ipynb
+++ b/notebooks/module_2/experiments.ipynb
@@ -411,6 +411,13 @@
     "    }\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "more services > cards / pin / digivault"
+   ]
   }
  ],
  "metadata": {
